# libbpg

./: .gitignore  ChangeLog  Makefile  Makefile-original  Makefile.am  README  bpgdec.c  bpgenc.c  bpgenc.h  bpgfmt.c  bpgfmt.h  bpgmux.c  bpgview  bpgview.c  config.h  configure.ac  jctvc_glue.cpp  libbpg.c  libbpg.h  libbpg.pc.in  post.js  tmalloc.c  x265_glue.c
jctvc/: TAppEncCfg.cpp  TAppEncCfg.h  TAppEncTop.cpp  encmain.cpp
jctvc/TLibCommon/: TComDataCU.cpp  TComPattern.cpp  TComPrediction.h  TComSlice.cpp
jctvc/TLibEncoder/: SEIEncoder.cpp  SEIEncoder.h  TEncAnalyze.h  TEncCavlc.cpp  TEncCfg.h  TEncCu.cpp  TEncGOP.cpp  TEncSampleAdaptiveOffset.cpp  TEncSearch.cpp  TEncSlice.cpp  TEncTop.cpp
libavcodec/: utils.c
man/templates/: bpg.5.footer  bpgdec.1.footer  bpgenc.1.footer  bpgmux.1.footer  bpgmux.1.header.in  bpgview.1.footer
